--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <html>
+  <head>
+    <meta name="google-site-verification" content="BKGQUq_wEKQ9TBbS9ocF3f2FadgmY_xoe1oetLCuFoM" />
+  </head>
 <body>
+hi
+  </body>
+</html>
