--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-  <head>
-    <meta name="google-site-verification" content="BKGQUq_wEKQ9TBbS9ocF3f2FadgmY_xoe1oetLCuFoM" />
-  </head>
+<head>
+<meta name="google-site-verification" content="BKGQUq_wEKQ9TBbS9ocF3f2FadgmY_xoe1oetLCuFoM" />
+<title>sites</title>
+</head>
 <body>
-hi
-  </body>
+contenu de la page
+</body>
 </html>
